# flask_app

./: .gitignore  Dockerfile  README.md  flask-app-deployment.yaml  pyproject.toml  run.py  terraform.tfstate
.github/workflow/: docker_build_push.yml
.github/workflows/: docker_build_push.yml
flask_app/: train.py  train1.ipynb  train1.py
flask_app/app/: logistic_regression_model.pkl  routes.py
flask_app/app/templates/: index.html
