[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["mj-pakdel <pakdel.mj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
